# solana-agent-app

./: README.md  docker-compose.yml  zep.yaml
agent/: .env.sample  Procfile  dev.sh  pyproject.toml
agent/solana_agent/: config.py  main.py
agent/solana_agent/services/: chat_service.py  solana_actions.py  x_bot.py
agent/solana_agent_app/: config.py  main.py
agent/solana_agent_app/services/: chat_service.py  solana_actions.py
site/: .env.sample  .gitignore  components.json  package.json
site/app/: layout.tsx
site/components/: Content.tsx
site/pages/: privacy.tsx  terms.tsx
site/pages/api/: send_sol.ts  send_spl.ts  send_token.ts  swap.ts
site/utils/: chatStore.ts  contentData.ts
